# vk-renderer

./: .gitignore  CMakeLists.txt  imgui.ini  runrd.sh
captrue/: debug3_frame1193.rdc  debug3_frame974.rdc
pyscript/: debug_oct.py  debug_regression.py  integrate.py
src/: CMakeLists.txt  advanced_ssr.cpp  advanced_ssr.hpp  backbuffer_subpass.hpp  backbuffer_subpass2.cpp  backbuffer_subpass2.hpp  base_app.hpp  defered_shading.cpp  defered_shading.hpp  downsample_pass.cpp  downsample_pass.hpp  draw_directions.hpp  frame_resources.hpp  framegraph.cpp  framegraph.hpp  gbuffer_subpass.cpp  gbuffer_subpass.hpp  gbuffer_subpass2.cpp  gbuffer_subpass2.hpp  gpu_context.hpp  gpu_transfer.cpp  gpu_transfer.hpp  gtao.cpp  gtao.hpp  image_readback.cpp  image_readback.hpp  imgui_context.hpp  imgui_pass.cpp  imgui_pass.hpp  main.cpp  probe_renderer.cpp  probe_renderer.hpp  scene_renderer.cpp  scene_renderer.hpp  screen_trace.cpp  screen_trace.hpp  ssao.cpp  ssao.hpp  ssr.cpp  ssr.hpp  (+8 more)
src/framegraph/: framegraph.cpp  framegraph.hpp
src/gpu/: CMakeLists.txt  buffer.cpp  buffer.hpp  cmd_buffers.cpp  cmd_buffers.hpp  cmdqueue.cpp  cmdqueue.hpp  common.cpp  common.hpp  context.cpp  context.hpp  descriptors.cpp  descriptors.hpp  driver.cpp  driver.hpp  dynbuffer.hpp  framebuffers.cpp  framebuffers.hpp  gpu.cpp  gpu.hpp  image.cpp  image.hpp  imgui_context.hpp  init.cpp  init.hpp  managed_resources.cpp  managed_resources.hpp  pipelines.cpp  pipelines.hpp  resource_info.hpp  resources.cpp  resources.hpp  samplers.cpp  samplers.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  swapchain.cpp  swapchain.hpp  (+4 more)
src/lib/imgui/: imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
src/renderer/: gbuffer.hpp  renderer.hpp
src/rendergraph/: gpu_ctx.cpp  gpu_ctx.hpp  rendergraph.cpp  rendergraph.hpp  resources.cpp  resources.hpp
src/scene/: camera.hpp  images.cpp  scene.cpp  scene.hpp  scene_as.cpp  scene_as.hpp
src/shaders/: Makefile  config.json
src/shaders/advanced_ssr/: blur.comp  classification.comp  depth_mips.frag  downsample_gbuffer.frag  filter.comp  fullscreen.vert  preintegrate.comp  preintegrate_ssr.comp  regression.comp  trace.comp  trace_indirect.comp
src/shaders/comp0/: comp.spv  shader.comp
src/shaders/cube2oct/: shader.comp
src/shaders/cubemap_probe/: shader.frag  shader.vert
src/shaders/defered_shading/: shader.frag  shader.vert
src/shaders/depth_downsample/: shader.frag  shader.vert
src/shaders/gbuf/: default.frag  default.vert  default_frag.spv  default_vert.spv  opaque.frag  opaque.vert  opaque_frag.spv  opaque_taa.frag  opaque_taa.vert  opaque_vert.spv
src/shaders/gtao/: accum.comp  filter.comp  main.comp  main.frag  reproject.comp  rt_main.comp  rt_main.frag
src/shaders/gtao_opt/: deinterleave.comp  main_deinterleaved.comp
src/shaders/include/: brdf.glsl  gbuffer_encode.glsl  octahedral.glsl  screen_trace.glsl  screen_verts.glsl  trace_samples.glsl
src/shaders/perlin/: frag.spv  shader.frag  shader.vert
src/shaders/probe_downsample/: shader.frag
src/shaders/rotations/: rot.comp
src/shaders/screen_trace/: accumulate.comp  filter.comp  trace.comp
src/shaders/shadows/: default.frag  default.vert
src/shaders/ssao/: shader.frag
src/shaders/ssr/: shader.frag  shader.vert
src/shaders/taa/: resolve.comp
src/shaders/texdraw/: frag.spv  shader.frag  shader.vert  vert.spv
src/shaders/trace_probe/: shader.comp
src/shaders/triangle/: frag.spv  shader.frag  shader.vert  vert.spv
